# bearask

./: Cargo.toml  README.md
src/: confirm.rs  editor.rs  input.rs  lib.rs  multiselect.rs  number.rs  option.rs  password.rs  select.rs  sort.rs  style.rs  util.rs  validation.rs
src/form/: key.rs  mod.rs  render.rs  result.rs  value.rs
src/form/fields/: action.rs  confirm.rs  kind.rs  mod.rs  multiselect.rs  number.rs  password.rs  select.rs  sort.rs  text.rs
